# hierarchical-rag

./: .gitattributes  .gitignore  README.md  docker-compose.yml  main.ipynb  main.py  pyproject.toml
app/: build_db.py  graph.py  main.py  retriever.py  states.py  stream_handler.py
backend/: config.py  main.py
backend/app/: graph.py  prompts.py  retriever.py  states.py
data/: evaluation_dataset.joblib
data/fragmented/: abstracts1.txt  clinical_reports.txt
data/processed/: abs.json  book1.json  book1.md  clinical_reports.json
data/raw/: all_content.txt
data/vectors/: book_data_sample.joblib  clinical_data_sample.joblib  embedded_docs.joblib  research_data_sample.joblib
src/services/answer_synthesizer/: main.py
src/services/master_agent/: main.py
src/services/query_synthesizer/: main.py
src/services/workers/books/: main.py
src/services/workers/clinical/: main.py
src/services/workers/paper_abstract/: main.py  requirements.txt
src/utils/: create_vectors.py
