[project]
name = "rag-agent-adv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "langchain>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.3",
    "langgraph>=1.0.1",
    "llama-index==0.9.48",
    "llama-index-embeddings-gemini>=0.3.2",
    "llama-index-embeddings-google>=0.3.1",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-gemini>=0.5.0",
    "llama-index-llms-ollama>=0.6.2",
    "matplotlib>=3.10.3",
    "pip-system-certs>=5.2",
    "plotly>=6.2.0",
    "pymupdf>=1.26.3",
    "pypdf>=6.1.3",
    "ragas>=0.3.8",
    "rank-bm25>=0.2.2",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
]
