[project]
name = "heuristic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "faiss-gpu>=1.7.2",
    "fastapi>=0.121.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "langgraph>=1.0.1",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
]
